# rust_livecoding

./: .gitignore  Cargo.toml  Dockerfile  README.md  diesel.toml
http/: aircraft.http  http-client.env.json  root.http  weather.http
migrations/2024-10-04-100016_create_aircraft/: down.sql  up.sql
src/: apidoc.rs  appstate.rs  lib.rs  main.rs  schema.rs
src/endpoints/: aircraft.rs  mod.rs  weather.rs
src/models/: aircraft.rs  mod.rs
src/weather/: model.rs
