[package]
name = "tedtalk"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
diesel = { version = "2.2.4", features = ["r2d2", "sqlite"] }
r2d2 = "0.8.10"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["serde", "serde_json", "chrono", "env-filter"] }
utoipa = { version = "4.2.3", features = ["axum_extras", "chrono"] }
utoipa-redoc = { version = "4.0.0", features = ["axum"] }
